# movForth

./: .gitignore  CMakeLists.txt  LHC - Collider.txt  LICENSE  LLVMComponents.cmake  README.md  TargetGenComponents.cmake  boot.fs  main.cpp
DirtyPass/: IPO.h  InlineSimple.cpp  Inliner.cpp  Inliner.h  LegacyPassManager.cpp  LegacyPassManager.h
Examples/: Forth source.txt  Optimized IR.ll
Examples/Bubble/: boot.fs  bubble  bubble.S  bubble.fs
Examples/Conditional/: Forth source.S  Generated IR.ll  condition  condition.S  source  source.S  source.fs  source.ll
Examples/Fibonacci/: fibonacci  fibonacci.S  fibonacci.fs
Examples/Loop/: loop  loop.S  source  source.S  source.fs  source.ll
Examples/Memory/: memory  memory.S  memory.fs  source.fs
Examples/MultipleWords/: multiple  multiple.S  multiple.fs  source  source.S  source.ll
Examples/SimpleEmit/: emit  emit.S  emit.fs  source  source.S  source.ll
Examples/Swap/: swap  swap.S
Examples/fibonacci/: source  source.S  source.fs  source.ll
Examples/swap/: source  source.S  source.fs  source.ll
Interpret/: Interpreter.cpp  Interpreter.h  Stack.h  WordGenerator.cpp  WordGenerator.h
Word/: Word.cpp  Word.h
headers/: Constants.h  Input.h  Interpreter.h  PrimitiveEffects.h  PrimitiveEnums.h  Print.h  Stack.h  SystemExec.h  Types.h  Util.h  Word.h  WordGenerator.h
headers/Cyclic/: DictConversion.h  Structures.h  Translation.h
headers/Generation/: FBuilder.h  IRGenerator.h  ObjectGenerator.h  Variables.h
headers/Interpretation/: Data.h  ForthWord.h  IP.h  Input.h  Interpreter.h  LHC - Collider.txt  Local.h  Primitive.h  Stack.h  Types.h  Word.h  WordGenerator.h  iData.h  iWord.h
headers/Symbolic/: BasicBlock.h  Block.h  Effects.h  Instruction.cpp  Instruction.h  Pass.h  PrimitiveEffects.h  PrimitiveEnums.h  Structures.h  SymbolicPass.h  Translation.h  Word.cpp  Word.h  iWord.cpp  iWord.h  sWord.h
sources/: Interpreter.cpp  Print.cpp  SystemExec.cpp  Word.cpp
sources/Cyclic/: DictConversion.cpp  Structures.cpp  SymbolicPass.cpp  Translation.cpp
sources/Generation/: FBuilder.cpp  IRGenerator.cpp  ObjectGenerator.cpp  Variables.cpp
sources/Interpretation/: Data.cpp  ForthWord.cpp  IP.cpp  Interpreter.cpp  Primitive.cpp  Stack.cpp  Word.cpp  WordGenerator.cpp  iData.cpp  iWord.cpp
sources/Symbolic/: BasicBlock.cpp  Block.cpp  BlockEntriesPass.cpp  Instruction.cpp  Pass.cpp  Pass_BBStackGraph.cpp  Pass_BlockStackGraph.cpp  Pass_ComputeMatchingPairs.cpp  Pass_MatchingPairs.cpp  Pass_ToBasicBlocks.cpp  Pass_TranslateToBasicBlocks.cpp  Pass_WordStackGraph.cpp  Structures.cpp  SymbolicPass.cpp  SymbolicPass_BBCyclicPass.cpp  SymbolicPass_BBStackGraph.cpp  SymbolicPass_BlockEntries.cpp  SymbolicPass_ComputeMatchingPairs.cpp  SymbolicPass_RetrievePushPopEffects.cpp  SymbolicPass_StackGraph.cpp  SymbolicPass_TranslateToBasicBlocks.cpp  SymbolicPass_WordStackGraph.cpp  Translation.cpp  sWord.cpp
zInterpret_old/: Interpreter.cpp  Interpreter.h  Stack.h
